# ai-smart-formula

./: README.md
app/: .env.example  .flake8  README.md  main.py  pyproject.toml
app/api/routes/: __init__.py  health.py
app/config/: __init__.py  settings.py
app/db/: database.py
app/models/: __init__.py  experiment.py  feedback.py  recipe.py  user.py
app/models/schemas/: common.py  recipe.py  user.py  workstation.py
app/scripts/: __init__.py  create_env.py
app/utils/: __init__.py  logger.py
